2007-05-11  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-ui-stats-modules.tmpl: Download the po
	with the icon, go to module with the link.
	Fixes bug #400392.

2007-05-10  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in:
	* templates/language-release.tmpl:
	* templates/release.tmpl: Replace property name (type->status).

2007-05-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add shared-mime-info and put non-GNOME modules
	at the end of file.
	* releases.xml.in: Add freedesktop.org release set.
	* templates/language-release.tmpl: Add a warning for non-GNOME
	modules.
	* templates/release.tmpl: Add a warning for non-GNOME release set.

2007-05-08  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Cancel the svnroot default property for
	external modules.
	* templates/module.tmpl: Add a warning for non GNOME modules.

2007-05-08  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release-module-xml.tmpl: Typo: #endif to #end
	if.

2007-05-08  Claude Paroz  <claude@2xlibre.net>

	* releases.py:
	* templates/language-release-module-xml.tmpl: Added <svnpath> also for
	documentation po files.

2007-05-07  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added xdg-user-dirs-gtk to Extras.
	Fixes bug #436587.
	Pybliographer reset to HEAD.

2007-05-04  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Assamese translation coordinator.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added nemiver module. Fixes #435568.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Track HEAD for glib and gtk+ for 2.20.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* view-module.py: Do not show 100% when not all strings are
	translated.
	Sort by translated strings instead of supportedness.

2007-05-02  Claude Paroz  <claude@2xlibre.net>
