@@ -1,5 +1,9 @@
 2007-05-11  Claude Paroz  <claude@2xlibre.net>
 
+	* teams.py: Sort release list on language team page.
+
+2007-05-11  Claude Paroz  <claude@2xlibre.net>
+
 	* templates/language-release-doc-stats-modules.tmpl:
 	* templates/language-release-ui-stats-modules.tmpl: Download the po
 	with the icon, go to module with the link.
